arreglo algunas cosas y agrego asincronismo

--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,7 @@ main {
     margin: 0;
     padding: 0;
   }
+
+  .custom-spinner .spinner-border {
+    color: #ff0000; /* Cambia el color a rojo (#ff0000) */
+  }
